# Escape-Room

./: .gitignore  .replit  README.md  game.py  main114.py  mid.py  pyproject.toml  room022.py  room114.py  room_ann.py  top.py  topView.py  utils.py
room022/: back.py  dialogueUtil.py  doorLeft.py  doorRight.py  front.py  inputUtil.py  itemList.py  mainTheme.py  maintheme.py  room022.py  sceneUtil.py
room022/room022/: constants.py  doorLeft.py  doorRight.py  inputUtil.py  mainTheme.py  room022.py  sceneUtil.py
room114/: room114.py
venv1/: pyvenv.cfg
venv1/Scripts/: activate  activate.bat
