[tool.poetry]
name = "repl-nix-escape-room"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_escape_room"}]

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
